--- a/DemoApp/app/build.gradle
+++ b/DemoApp/app/build.gradle
@@ -25,12 +25,14 @@ android {
         applicationId "dev.chromeos.lowlatencystylusdemo"
         minSdkVersion 28
         targetSdkVersion 30
-        versionCode 2
-        versionName "1.0.2"
+        versionCode 3
+        versionName "1.0.3"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
+    buildFeatures {
+        dataBinding true
+    }
     buildTypes {
         release {
             minifyEnabled false
